# trustarant

./: .gcloudignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/src/: config.rs  main.rs
backend/src/application/: dto.rs
backend/src/application/services/: directory_service.rs  ingestion_service.rs  mod.rs  trust_score_service.rs  vote_service.rs
backend/src/domain/: entities.rs  errors.rs  repositories.rs
backend/src/infrastructure/: mod.rs  scheduler.rs
backend/src/infrastructure/connectors/: cpra_connector.rs  la_county_connector.rs  lives_batch_connector.rs  long_beach_connector.rs  mod.rs  san_diego_connector.rs
backend/src/infrastructure/repositories/: in_memory_facility_repository.rs  mod.rs  postgres_facility_repository.rs
backend/src/presentation/http/: handlers.rs  mod.rs  rate_limit.rs  routes.rs
cloudbuild/: backend.cloudbuild.yaml  frontend.cloudbuild.yaml
docs/research/: socal-food-safety-data-strategy.md  strategic-framework-full.md
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  server.mjs  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/lib/: analytics.ts
frontend/src/types/: carbon-icons-vue.d.ts
infra/terraform/: README.md
infra/terraform/bootstrap/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  (+1 more)
scripts/: create_cloudbuild_triggers.sh
